# rnote-llm

./: Cargo.toml  README.md
src/: PROMPT.txt  SUMMARIZE.txt  TEST.txt  cli.rs  main.rs
